# directory-pipeline

./: .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  align_ocr.py  app.html  app.py  brewery-guides.txt  colab.sh  compare_extraction.py  compare_ocr.py  detect_columns.py  detect_spreads.py  download_images.py  extract_entries.py  geocode_entries.py  green_books.txt  green_books_and_related.txt  iiif_utils.py  improve_alignment.py  main.py  make-git-repo.sh  nypl_collection_csv.py  ocr_prompt_original.md  pdf_to_images.py  pyproject.toml  repatch_fragments.py  requirements.txt  run_gemini_ocr.py
.claude/skills/debug-pipeline/: SKILL.md
.claude/skills/debug-pipeline/references/: gotchas.md
.claude/skills/explore-entries/: SKILL.md
.claude/skills/new-collection/: SKILL.md
.claude/skills/pipeline-run/: SKILL.md
.claude/skills/uxreview/: SKILL.md
.github/workflows/: ci.yml
analysis/: check_manifest_staleness.py  combine_volumes.py  compare_extraction.py  compare_ocr.py  fix_entries.py  model_eval.py  review_entries.py  visualize_alignment.py  visualize_entries.py
cli/: main.py
colab/: chandra-ocr-test.ipynb  enriched-pipeline-walkthrough.ipynb  library-cookbook.ipynb  ner-local-model-test.ipynb  ocr-align-review-on-colab.ipynb  ocr-align-review.ipynb  qwen-yaml-ner.ipynb
docs/: README.md  aws-migration-plan.md  comparison-htr-alto-pipeline.md  costs.md  huggingface-uv-scripts.md  key-design-decisions.md  pipeline-stages.md  prior-work.md  section-detection-plan.md  usage-examples.md
docs/plans/: aws-migration-plan.md  huggingface-uv-scripts.md  local-ocr-backend.md  section-detection-plan.md
old/: improve_alignment.py  run_ocr.py
pipeline/: align_ocr.py  api.py  build_ranges.py  compare_ocr.py  detect_columns.py  detect_spreads.py  download_images.py  explore_entries.html  explore_entries.py  export_alto.py  export_annotations.py  export_entry_boxes.py  extract_entries.py  generate_prompt.py  geocode_entries.py  map_entries.py  patch_canvas_fragments.py  postprocess.py  rescale_canvas_fragments.py  review_alignment.html  review_alignment.py  review_ocr.py  run_chandra_ocr.py  run_gemini_ocr.py  run_local_ocr.py  run_surya_ocr.py  select_pages.html  select_pages.py  select_sample_pages.py  split_spreads.py  stages.py  state.py  surya_detect.py  visualize_alignment.py
pipeline/geo/: geocode_entries.py  map_entries.py
pipeline/iiif/: build_ranges.py  export_annotations.py  export_entry_boxes.py  label_utils.py
prompts/: README.md  ner_prompt.md  ocr_prompt.md
prompts/examples/: ner_prompt_greenbook.md  ocr_prompt_greenbook.md
sources/: build_contentdm_manifest.py  ia_collection_csv.py  ia_utils.py  iiif_manifest_csv.py  loc_collection_csv.py  loc_utils.py  nypl_collection_csv.py  nypl_utils.py
tests/: conftest.py  dryrun_harness.sh  test_align_parse.py  test_api.py  test_app_arg_defs.py  test_app_output_dir.py  test_canvas_fragment.py  test_detect_column_merges.py  test_dryrun_cli.py  test_export_alto.py  test_fix_entries.py  test_iiif_utils.py  test_image_utils.py  test_models.py  test_preflight.py  test_slug_generation.py  test_slugs.py  test_stages_registry.py  test_state.py
tools/: README.md  detect_column_merges.py  patch_canvas_fragments.py  review_ocr.py
utils/: gemini.py  iiif_utils.py  image_utils.py  models.py  section_utils.py
