[project]
name = "directory-pipeline"
version = "0.1.0"
description = "Turn a public IIIF archive URL into a structured CSV using Gemini OCR and named entity extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0",
    "flask>=3.0",
]

[project.optional-dependencies]
# Development and testing tools.
# Install with: pip install -e ".[dev]"
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

# Heavy GPU-dependent OCR models (Surya).
# Install with: pip install -e ".[gpu]"
gpu = [
    "surya-ocr>=0.17.1",
    "transformers>=4.56.1,<5.0",
]
# Geocoding and map generation.
# Install with: pip install -e ".[geo]"
geo = [
    "geopy>=2.4",
]
# Everything.
# Install with: pip install -e ".[all]"
all = [
    "directory-pipeline[gpu,geo]",
]
