[project]
name = "directory-pipeline"
version = "0.1.0"
description = "Turn a public IIIF archive URL into a structured CSV using Gemini OCR and named entity extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "shapely>=2.1.2",
]

[project.scripts]
pipeline = "cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "pipeline", "sources", "utils", "analysis"]

[dependency-groups]
# Installed by `uv sync` by default (dev group); not part of the published wheel.
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
# Heavy GPU-dependent OCR models (Surya).
# Install with: pip install -e ".[gpu]"
gpu = [
    "surya-ocr>=0.17.1",
    "transformers>=4.56.1,<5.0",
]
# Geocoding and map generation.
# Install with: pip install -e ".[geo]"
geo = [
    "geopy>=2.4",
]
# Everything.
# Install with: pip install -e ".[all]"
all = [
    "directory-pipeline[gpu,geo]",
]
